# pinjected

./: .coverage.CA-20022388.20306.XhqanQKx  .gitignore  .linear  .linter-changes-done  .pinjected-lint.toml  .pre-commit-config.yaml  .readthedocs.yaml  .skip-test-hook  .test-disable-flag  CHANGELOG.md  CODING_GUIDELINES.md  COMMIT_MESSAGE.txt  Claude.md  LICENSE  LINTER_CHANGES_COMPLETE.md  Makefile  PR_BODY_PINJ036.md  PR_DESCRIPTION.md  PR_DESCRIPTION_UPDATE.md  PYTHON_GUIDELINE.md  README.md  TODOs.md  architecture.md  fix_eval_injected.py  fix_operator_tests.py  lint-pinjected.sh  migration_to_design.md  publish.xsh  pyproject.toml  run_failed_pinjected.demo.LLM.txt  run_failed_pinjected.demo.test_greeting.txt  serena_config.yml  test.json  test_dependency_graph_fix.py  test_instance_callable_example.py  todo.md  usdjpy_example.py  verify_iproxy_fix.py
.github/: PR_BODY_issue320.md
.github/workflows/: ci.yml  pytest.yml  sync-to-proboscis.yml
.reviewers/: advanced_features_rule.md  best_practices_rule.md  decorator_misuse_reviewer.py  decorator_rule.md  dependency_configuration_rule.md  design_function_rule.md  use_cases_rule.md
.serena/: project.yml
dev_docs/: README.md  how-to-add-package.md  migration_guide__meta_design__to__design__enhanced.md  migration_guide__meta_design__to__design__manual_steps.md  migration_guide__meta_design__to__design__original.md  migration_guide__meta_design__to__design__summary.md  uv-monorepo-conversion-log.md
dev_docs/migration/: migration_to_design.md
docs/: 01_introduction.md  02_design.md  03_decorators.md  04_injected.md  05_running.md  06_async.md  07_resolver.md  10_updates.md  ci_triage_issue320.md  conf.py  how_to_use_pinjected.md  index.rst  pytest-fixtures.md  requirement.txt
docs-for-ai/: pinjected-guide-for-ai.md
docs_ja/: 01_introduction.md  zenn.md
docs_ja/migration/: migration_to_design.md
docs_md/: 01_introduction.md  02_design.md  03_decorators.md  04_injected.md  04_injected_proxy.md  05_running.md  06_async.md  07_resolver.md  08_01_add_config.md  08_misc.md  09_appendix.md  10_updates.md  11_advanced_usage.md  README.md  how-to-add-package.md  migration_guide_meta_design_to_design.md  uv-monorepo-conversion-log.md
docs_md/migration/: migration_to_design.md
examples/: usdjpy_example.py
exporter/: llm_exporter.py
ide-plugins/pycharm/: .gitignore  DEBUG_INSTRUCTIONS.md  DEVELOPMENT_CHALLENGES.md  INTEGRATION_TASK.md  IPROXY_TESTING_GUIDE.md  Makefile  NAVIGATION_FEATURE.md  PLUGIN_DOCUMENTATION.md  PROJECT_STRUCTURE.md  README.md  TESTING.md  TEST_NOW.md  build.gradle.kts  pycharm_info.md  run_tests.sh  settings.gradle.kts  test_iproxy.py  test_iproxy.pyi
issues/: future-improvements.md  github-issue-template.md  issue-2025-03-15-deprecation_warnings.md  issue-2025-03-15-summary.md  issue-2025-03-15-test_create_configurations.md  issue-2025-03-15-test_importance.md  issue-2025-03-15-test_runner_async.md  issue-injected-pytest-compatibility.md  migration-patterns.md  test-fixing-summary.md
pinject_design/: __init__.py  exceptions.py  global_configs.py  graph_inspection.py  helper_structure.py  helpers.py  module_inspector.py  nx_graph_util.py  run_config_utils.py  run_config_utils_v2.py  visualize_di.py
pinject_design/di/: app_designed.py  app_injected.py  applicative.py  ast.py  bindings.py  design.py  designed.py  dynamic_proxy.py  graph.py  implicit_globals.py  injected.py  injected_analysis.py  modular_injected.py  playground.py  provider.py  proxiable.py  session.py  sessioned.py  static_proxy.py  test_ast.py  test_dynamic_proxy.py  test_graph.py  test_injected.py  test_proxiable.py  util.py
pinject_design/test_package/: __init__.py
pinjected/: __init__.py  __main__.py  decoration.py  demo.py  dependency_graph_builder.py  dependency_graph_description.py  exception_util.py  exceptions.py  global_configs.py  graph_inspection.py  helper_structure.py  helper_structure.pyi  helpers.py  logging_helper.py  main_impl.py  main_impl.pyi  maybe_patch.py  meta_main.py  module_helper.py  module_inspector.py  module_var_path.py  notification.py  nx_graph_util.py  picklable_logger.py  picklable_logger.pyi  pinjected_logging.py  providable.py  pytest_fixtures.py  pytest_fixtures.pyi  pytest_fixtures_batch.py  pytest_fixtures_final.py  pytest_fixtures_simple.py  pytest_fixtures_v2.py  run_config_utils.py  run_config_utils_v2.py  runnables.py  visualize_di.py  with_context.py
scripts/: stop_hook_test_runner.py  test_lock_mechanism.py  test_runner_with_lock.py
src/: example_module.py  obvious_test.py  simple_demo.py
templates/: checklist.md
test/: conftest.py  test__main__.py  test__main___coverage.py  test__main__simple.py  test_add_overload.py  test_args_pure.py  test_async_injected_ast.py  test_async_resolver.py  test_async_simple.py  test_binding_location_display.py  test_binding_metadata_display.py  test_call_proper.py  test_call_simple.py  test_claude_code.py  test_cli_visualizations_init.py  test_cli_visualizations_tree.py  test_compatibility_task_group.py  test_compatibility_task_group_comprehensive.py  test_compatibility_task_group_simple.py  test_config_creator_for_env.py  test_configuration_loading.py  test_console_run_helper.py  test_core_async.py  test_core_design_iproxy.py  test_core_injected.py  test_core_instance.py  test_coverage_boost.py  test_cyclic_dependency.py  test_decoration.py  test_decoration_coverage.py  test_decoration_simple.py  test_decorator_protocol.py  test_decorator_protocol_runtime.py  test_decorator_protocol_types.py  test_demo.py  test_dependency_graph_builder.py  test_dependency_graph_builder_simple.py  test_dependency_graph_description.py  test_dependency_graph_description_coverage.py  test_describe.py  (+227 more)
tests/: test_dependency_chain_completeness.py  test_describe_command.py  test_describe_dependencies_required.py  test_injected_cache_utils.py  test_used_by_in_describe.py  test_used_by_with_actual_design.py
tmp/: test_binding_location.py  test_binding_metadata_display.py
tools/: README.md  wait_for_ci.py
tutorials/: Introduction.ipynb
(+244 files in other folders)
