[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pinjected"
version = "0.2.246"
description = "Immutable Dependency Injection for Python."
authors = [
    {name = "proboscis", email = "nameissoap@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "returns",
    "expression",
    "cloudpickle",
    "tabulate",
    "cytoolz",
    "frozendict",
    "fire",
    "pyyaml",
    "pyvis",
    "makefun",
    "loguru",
    "rich",
    "pydantic",
    "pytest",
    "beartype",
    "pytest-asyncio",
    "pytest-xdist",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "tqdm>=4.66.5",
    "click>=8.1.7",
    "wandb>=0.17.8",
    "pytest-xdist>=3.6.1",
]

[project.scripts]
pinjected = "pinjected.main_impl:main"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
pythonpath = [
    "packages/anthropic/src",
    "packages/wandb/src",
    "packages/error_reports/src",
    "packages/reviewer/src",
    "packages/rate_limit/src"
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
pinjected-anthropic = { workspace = true }
pinjected-wandb = { workspace = true }
pinjected-error-reports = { workspace = true }
pinjected-reviewer = { workspace = true }
pinjected-rate-limit = { workspace = true }
